--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
+</head>
+
 <script src="https://unpkg.com/htmx.org"></script>
 
 
