--- a/hsl.html
+++ b/hsl.html
@@ -9,10 +9,16 @@
 </body>
 
 <!-- See file hsl.js for how data is injected into the page. -->
-<form hx-post="/calculate" hx-target="#results">
+<form id="loan-input" hx-post="/calculate" hx-target="#results">
 	<input type="text" name="principal" placeholder="Principal Amount" required>
 	<input type="text" name="interest_rate" placeholder="Annual Interest Rate" required>
 	<input type="number" name="loan_term_years" placeholder="Loan Term (Years)" required>
 	<button type="submit">Calculate</button>
 </form>
+
+<label for="loanHistory">Loan History:</label>
+<select id="loanHistoryDropdown" hx-get="/fetchHistory" hx-trigger="load">
+	<option value="">-- Fetching Loans --</option>
+</select>
+
 <div id="results"></div>
