Added ADR in README

--- a/hsl.html
+++ b/hsl.html
@@ -51,7 +51,7 @@
 
 		<!-- Loan History Dropdown -->
 		<div>
-			<label for="loanHistoryDropdown">Loan History:</label>
+			<label for="loanHistoryDropdown">Input History:</label>
 			<select id="loanHistoryDropdown" hx-get="/fetchHistory" hx-trigger="load, reloadHistory from:body">
 				<option value="">-- Fetching Loans --</option>
 			</select>
