--- a/hsl.html
+++ b/hsl.html
@@ -13,9 +13,14 @@
 		.flex-container {
 			display: flex;
 			flex-direction: column;
-			align-items: center;
-			justify-content: center;
+			align-items: stretch;
 			gap: 20px;
+		}
+
+		.flex-container-vertical {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
 		}
 
 		h1 {
@@ -81,7 +86,7 @@
 		@media (min-width: 600px) {
 			.flex-container {
 				flex-direction: row;
-				align-items: flex-start;
+				align-items: stretch;
 			}
 
 			input[type="text"],
@@ -114,12 +119,18 @@
 			<button type="submit">Calculate</button>
 		</form>
 
-		<!-- Loan History Dropdown -->
-		<div>
-			<label for="loanHistoryDropdown">Recent Input:</label>
-			<select id="loanHistoryDropdown" hx-get="/fetchHistory" hx-trigger="load, reloadHistory from:body">
-				<option value="">-- Fetching Loans --</option>
-			</select>
+		<div class="flex-container-vertical">
+			<!-- Loan History Dropdown -->
+			<div>
+				<label for="loanHistoryDropdown">Recent Input:</label>
+				<select id="loanHistoryDropdown" hx-get="/fetchHistory" hx-trigger="load, reloadHistory from:body">
+					<option value="">-- Fetching Loans --</option>
+				</select>
+			</div>
+
+			<!-- Interest Rate Display -->
+			<div id="currentRate" style="color: #FFF; margin-top: 20px; margin-bottom:20px">
+			</div>
 		</div>
 	</div>
 
