More CSS changes

--- a/hsl.html
+++ b/hsl.html
@@ -107,12 +107,12 @@
 			input[type="text"],
 			input[type="number"],
 			select {
-				width: auto;
+				width: 80%;
 				margin-right: 10px;
 			}
 
 			button[type="submit"] {
-				width: auto;
+				width: 80%;
 			}
 		}
 	</style>
